--- a/app/src/main/res/layout/notification_large.xml
+++ b/app/src/main/res/layout/notification_large.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -8,12 +7,13 @@
     <RelativeLayout
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/smallImg"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:scaleType="centerInside"/>
 
         <TextView
@@ -23,6 +23,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:textSize="16sp"
+            style="@style/TextAppearance.Compat.Notification.Title"
             android:layout_alignParentRight="@+id/smallImg"
             android:layout_toRightOf="@+id/smallImg"/>
 
@@ -42,9 +43,8 @@
     <ImageView
         android:id="@+id/largeImg"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@mipmap/ic_launcher"
         />
 
 
