Implemented RemoteView Image from Url

--- a/app/src/main/res/layout/notification_large.xml
+++ b/app/src/main/res/layout/notification_large.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/smallImg"
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"/>
 
         <TextView
@@ -43,7 +43,7 @@
     <ImageView
         android:id="@+id/largeImg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="5dp"
         />
 
