--- a/app/src/main/res/layout/notification_small.xml
+++ b/app/src/main/res/layout/notification_small.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/smallImg"
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerInside"/>
 
         <TextView
